<resources>
    <string name="app_name" translatable="false">fotoframe</string>
    <string name="tvvlogin">验证码登录</string>
    <string name="tvplogin">密码登录</string>
    <string name="tip_vlogin">新用户登录后将自动创建账号</string>
    <string name="tip_glogin">新用户请使用验证码注册登录</string>
    <string name="etphone">输入手机号</string>
    <string name="etvcode">输入验证码</string>
    <string name="etpassword">输入密码</string>
    <string name="getvcode">获取验证码</string>
    <string name="btlogin">登录</string>
    <string name="order_login">其他登录方式</string>
    <string name="tips1">点击登录即代表同意</string>
    <string name="tips2">和</string>
    <string name="user_agreement">用户协议</string>
    <string name="privacy_policy">隐私政策</string>

    <string name="QXXK">全息相框</string>
    <string name="conn_devices">设备1已连接</string>
    
    <string name="device_capabilities">设备功能</string>
    <string name="account_management">账号管理</string>

    <string name="phone">手机号</string>
    <string name="wechat">微信</string>
    <string name="password">账号密码</string>

    <string name="btsignout">退出登录</string>

    <string name="selectdevice">选择设备</string>
    <string name="confirm">确认</string>

    <string name="bindphone">绑定手机号</string>
    <string name="changephone">更换手机号</string>

    <string name="changepassword">修改密码</string>

    <string name="oldpassword">请输入原密码</string>
    <string name="newpassword">请输入新密码</string>
    <string name="confirmpassword">请再次输入新密码</string>

    <string name="mydevice">我的设备</string>

    <string name="maindevice">主设备</string>
    <string name="sharedevice">共享设备</string>

    <string name="device_name">设备名称</string>
    <string name="share_manager">分享管理</string>
    <string name="pic_manager">图片管理</string>
    <string name="device_share">设备分享</string>
    <string name="device_unbound">设备解绑</string>
</resources>
