<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.fotoframe.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="31dp">
        <TextView
            android:id="@+id/tv_vlogin"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginLeft="42dp"
            android:layout_alignParentBottom="true"
            android:text="@string/tvvlogin"
            android:textSize="20sp"
            android:textColor="#0283E1"/>
        <TextView
            android:id="@+id/tv_plogin"
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:layout_marginLeft="253dp"
            android:layout_alignParentBottom="true"
            android:text="@string/tvplogin"
            android:textSize="18sp"
            android:textColor="#666666"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="156dp"
        android:layout_height="17dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="20dp"
        android:text="@string/tip_vlogin"
        android:textSize="12sp"
        android:textColor="#999999"/>
    <RelativeLayout
        android:layout_width="290dp"
        android:layout_height="46dp"
        android:layout_marginTop="78dp"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="43dp"
        android:background="@drawable/edge2">

        <TextView
            android:layout_width="26dp"
            android:layout_height="20dp"
            android:layout_marginLeft="30dp"
            android:layout_centerVertical="true"
            android:text="+86"
            android:textSize="14sp"
            android:textColor="#000000" />
        <EditText
            android:id="@+id/etphone"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="68dp"
            android:layout_centerVertical="true"
            android:inputType="phone"
            android:hint="@string/etphone"
            android:textSize="14sp"
            android:textColorHint="#999999"
            android:background="@null"/>
        <TextView
            android:id="@+id/delete1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="246dp"
            android:layout_centerVertical="true"
            android:text="X"
            android:textColor="#666666"/>
    </RelativeLayout>
    <FrameLayout
        android:layout_width="290dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="43dp"
        android:background="@drawable/edge2">
        <RelativeLayout
            android:id="@+id/rl_vlogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/et_vcode"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:inputType="number"
                android:layout_marginLeft="30dp"
                android:layout_centerVertical="true"
                android:hint="@string/etvcode"
                android:textSize="14sp"
                android:textColorHint="#999999"
                android:background="@null"/>
            <TextView
                android:id="@+id/getvcode"
                android:layout_width="70dp"
                android:layout_height="20dp"
                android:layout_marginLeft="189dp"
                android:layout_centerVertical="true"
                android:text="@string/getvcode"
                android:textSize="14sp"
                android:textColor="#0283E1"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_plogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <ImageView
                android:layout_width="19dp"
                android:layout_height="21dp"
                android:layout_marginLeft="33dp"
                android:layout_centerVertical="true"
                android:src="@drawable/littereye"
                android:id="@+id/imageView" />
            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:inputType="textPassword"
                android:layout_marginLeft="68dp"
                android:layout_centerVertical="true"
                android:hint="@string/etpassword"
                android:textSize="14sp"
                android:textColorHint="#999999"
                android:background="@null"/>
            <TextView
                android:id="@+id/delete2"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="246dp"
                android:layout_centerVertical="true"
                android:text="X"
                android:textColor="#666666"/>
        </RelativeLayout>
    </FrameLayout>
    <Button
        android:id="@+id/btlogin"
        android:layout_width="290dp"
        android:layout_height="46dp"
        android:layout_marginTop="103dp"
        android:layout_marginLeft="42dp"
        android:background="@drawable/edge"
        android:text="@string/btlogin"
        android:textSize="16sp"
        android:textColor="#FFFFFF"/>
    <LinearLayout
        android:layout_width="226dp"
        android:layout_height="17dp"
        android:layout_marginTop="153dp"
        android:layout_marginLeft="75dp"
        android:orientation="horizontal">
        <View
            android:layout_width="70dp"
            android:layout_height="0.5dp"
            android:background="#999999"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="72dp"
            android:layout_height="17dp"
            android:text="@string/order_login"
            android:textSize="12sp"
            android:textColor="#999999"/>
        <View
            android:layout_width="70dp"
            android:layout_height="0.5dp"
            android:background="#999999"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <HorizontalScrollView
        android:layout_width="120dp"
        android:layout_height="34dp"
        android:scrollbars="none"
        android:layout_marginTop="21dp"
        android:layout_marginLeft="120dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/dispaly_linearlayer">
            <GridView
                android:id="@+id/gv_icon"
                android:layout_width="174dp"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:duplicateParentState="true"
                android:stretchMode="none">
            </GridView>
        </LinearLayout>
    </HorizontalScrollView>
    <LinearLayout
        android:layout_width="211dp"
        android:layout_height="14dp"
        android:layout_marginTop="62dp"
        android:layout_marginLeft="82dp"
        android:layout_marginBottom="37dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:text="@string/tips1"
            android:textSize="10sp"
            android:textColor="#999999"/>
        <TextView
            android:id="@+id/user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:layout_marginLeft="3dp"
            android:text="@string/user_agreement"
            android:textSize="10sp"
            android:textColor="#0283E1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:layout_marginLeft="3dp"
            android:text="@string/tips2"
            android:textSize="10sp"
            android:textColor="#999999"/>
        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:layout_marginLeft="3dp"
            android:text="@string/privacy_policy"
            android:textSize="10sp"
            android:textColor="#0283E1"/>
    </LinearLayout>
</LinearLayout>
