<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:background="@drawable/bg_icon"/>
    <RelativeLayout
        android:id="@+id/rl_tohome"
        android:layout_width="334dp"
        android:layout_height="103dp"
        android:layout_marginTop="53dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/device">
        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="11dp"
            android:background="@drawable/device_icon"/>
        <TextView
            android:id="@+id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="39dp"
            android:layout_marginLeft="101dp"
            android:text="@string/QXXK"
            android:textSize="18sp"
            android:textColor="@color/black"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="334dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="56dp"
            android:layout_height="20dp"
            android:layout_marginTop="203dp"
            android:layout_marginLeft="13dp"
            android:text="@string/device_capabilities"
            android:textSize="14sp"
            android:textColor="@color/grey"/>
        <Button
            android:id="@+id/bt_scan"
            android:layout_width="48dp"
            android:layout_height="61dp"
            android:layout_marginTop="241dp"
            android:layout_marginLeft="13dp"
            android:background="@drawable/btscan"/>
        <Button
            android:id="@+id/bt_device"
            android:layout_width="48dp"
            android:layout_height="61dp"
            android:layout_marginTop="241dp"
            android:layout_marginLeft="94dp"
            android:background="@drawable/btdevice"/>
        <TextView
            android:layout_width="56dp"
            android:layout_height="20dp"
            android:layout_marginTop="330dp"
            android:layout_marginLeft="13dp"
            android:text="@string/account_management"
            android:textSize="14sp"
            android:textColor="@color/grey"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="367dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/icon_phone"/>
        <TextView
            android:layout_width="42dp"
            android:layout_height="20dp"
            android:layout_marginTop="370dp"
            android:layout_marginLeft="71dp"
            android:text="@string/phone"
            android:textSize="14sp"
            android:textColor="@color/tv_nomarl"/>

        <Button
            android:id="@+id/to_phone"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="373dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/go"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="416dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/icon_weixin"/>
        <TextView
            android:layout_width="42dp"
            android:layout_height="20dp"
            android:layout_marginTop="420dp"
            android:layout_marginLeft="71dp"
            android:text="@string/wechat"
            android:textSize="14sp"
            android:textColor="@color/tv_nomarl"/>
        <Button
            android:id="@+id/to_weixin"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="422dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/go"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="464dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/icon_password"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="466dp"
            android:layout_marginLeft="71dp"
            android:text="@string/password"
            android:textSize="14sp"
            android:textColor="@color/tv_nomarl"/>
        <Button
            android:id="@+id/to_password"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="469dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/go"/>

        <Button
            android:id="@+id/btsignout"
            android:layout_width="260dp"
            android:layout_height="35dp"
            android:background="@drawable/btsignout_border"
            android:layout_marginTop="610dp"
            android:layout_centerHorizontal="true"
            android:text="@string/btsignout"
            android:textSize="16sp"
            android:textColor="#FBFBFB"/>
    </RelativeLayout>
</RelativeLayout>
