<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="325dp"
        android:layout_height="match_parent"
        android:layout_marginTop="11dp"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/changephone_back"
            android:layout_width="25dp"
            android:layout_height="26dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/back"/>

        <TextView
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:layout_centerHorizontal="true"
            android:text="@string/changephone"
            android:textSize="18sp"
            android:textColor="@color/grey"/>

        <RelativeLayout
            android:layout_width="290dp"
            android:layout_height="46dp"
            android:layout_marginTop="151dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/device">

            <TextView
                android:layout_width="26dp"
                android:layout_height="20dp"
                android:layout_marginLeft="30dp"
                android:layout_centerVertical="true"
                android:text="+86"
                android:textSize="14sp"
                android:textColor="#000000" />
            <EditText
                android:id="@+id/etphone"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="68dp"
                android:layout_centerVertical="true"
                android:inputType="phone"
                android:hint="@string/etphone"
                android:textSize="14sp"
                android:textColorHint="#999999"
                android:background="@null"/>
            <ImageButton
                android:id="@+id/delete1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="246dp"
                android:layout_centerVertical="true"
                android:background="@drawable/delete"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="290dp"
            android:layout_height="46dp"
            android:layout_marginTop="217dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/device">
            <EditText
                android:id="@+id/et_vcode"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:inputType="number"
                android:layout_marginLeft="30dp"
                android:layout_centerVertical="true"
                android:hint="@string/etvcode"
                android:textSize="14sp"
                android:textColorHint="#999999"
                android:background="@null"/>
            <TextView
                android:id="@+id/getvcode"
                android:layout_width="70dp"
                android:layout_height="20dp"
                android:layout_marginLeft="189dp"
                android:layout_centerVertical="true"
                android:text="@string/getvcode"
                android:textSize="14sp"
                android:textColor="#0283E1"/>
        </RelativeLayout>

        <Button
            android:id="@+id/changephone_confirm"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="359dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btlogin_border"
            android:text="@string/confirm"
            android:textSize="16sp"
            android:textColor="#FBFBFB"/>
    </RelativeLayout>
</RelativeLayout>
