<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="325dp"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/mydevices_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/back"/>
        <TextView
            android:layout_width="72dp"
            android:layout_height="25dp"
            android:layout_centerHorizontal="true"
            android:text="@string/mydevice"
            android:textSize="18sp"
            android:textColor="@color/grey"/>
        <Button
            android:id="@+id/mydevices_add"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/add" />
        <TextView
            android:id="@+id/tv_maindevice"
            android:layout_width="54dp"
            android:layout_height="25dp"
            android:layout_marginTop="53dp"
            android:gravity="center"
            android:text="@string/maindevice"
            android:textSize="18sp"
            android:textColor="@color/tv_focus"/>
        <TextView
            android:id="@+id/tv_sharedevice"
            android:layout_width="72dp"
            android:layout_height="25dp"
            android:layout_marginTop="53dp"
            android:layout_marginLeft="76dp"
            android:gravity="center"
            android:text="@string/sharedevice"
            android:textSize="16sp"
            android:textColor="@color/tv_nomarl"/>
        <View
            android:id="@+id/line_main"
            android:layout_width="50dp"
            android:layout_height="3dp"
            android:layout_marginTop="81dp"
            android:background="@color/tv_focus">
        </View>
        <View
            android:id="@+id/line_share"
            android:layout_width="66dp"
            android:layout_height="3dp"
            android:visibility="gone"
            android:layout_marginLeft="77dp"
            android:layout_marginTop="81dp"
            android:background="@color/tv_focus">
        </View>
        <ListView
            android:id="@+id/list_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"/>
    </RelativeLayout>
</RelativeLayout>
