<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="325dp"
        android:layout_height="match_parent"
        android:layout_marginTop="11dp"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/changepassword_back"
            android:layout_width="25dp"
            android:layout_height="26dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/back"/>

        <TextView
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:layout_centerHorizontal="true"
            android:text="@string/changepassword"
            android:textSize="18sp"
            android:textColor="@color/grey"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="290dp"
        android:layout_height="46dp"
        android:layout_marginTop="151dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/device">

        <TextView
            android:layout_width="45dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:text="原密码"
            android:textSize="14sp"
            android:textColor="#000000" />
        <EditText
            android:id="@+id/etoldpassword"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="96dp"
            android:layout_centerVertical="true"
            android:inputType="phone"
            android:hint="@string/oldpassword"
            android:textSize="14sp"
            android:textColorHint="#999999"
            android:background="@null"/>
        <ImageButton
            android:id="@+id/delete_old"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="246dp"
            android:layout_centerVertical="true"
            android:background="@drawable/delete"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="290dp"
        android:layout_height="46dp"
        android:layout_marginTop="217dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/device">

        <TextView
            android:layout_width="45dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:text="新密码"
            android:textSize="14sp"
            android:textColor="#000000" />
        <EditText
            android:id="@+id/etnewpassword"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="96dp"
            android:layout_centerVertical="true"
            android:inputType="phone"
            android:hint="@string/newpassword"
            android:textSize="14sp"
            android:textColorHint="#999999"
            android:background="@null"/>
        <ImageButton
            android:id="@+id/delete_new"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="246dp"
            android:layout_centerVertical="true"
            android:background="@drawable/delete"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="290dp"
        android:layout_height="46dp"
        android:layout_marginTop="283dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/device">

        <TextView
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_centerVertical="true"
            android:text="确认密码"
            android:textSize="14sp"
            android:textColor="#000000" />
        <EditText
            android:id="@+id/etconfirmpassword"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="96dp"
            android:layout_centerVertical="true"
            android:inputType="phone"
            android:hint="@string/confirmpassword"
            android:textSize="14sp"
            android:textColorHint="#999999"
            android:background="@null"/>
        <ImageButton
            android:id="@+id/delete_confirm"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="246dp"
            android:layout_centerVertical="true"
            android:background="@drawable/delete"/>
    </RelativeLayout>
    <Button
        android:id="@+id/changepassword_confirm"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="419dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btlogin_border"
        android:text="@string/confirm"
        android:textSize="16sp"
        android:textColor="#FBFBFB"/>
</RelativeLayout>
